--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ android {
 
         implementation 'com.squareup.picasso:picasso:2.71828'
         implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+
+        implementation 'com.google.android.material:material:1.1.0-alpha06'
     }
 }
 
